5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_1800.log
== TEST (2019-04-28 12:11:06) 
-- CODE:
var1 = int(input('primeira: '))
var2 = int(input('segunda: '))
var3 = int(input('terceira: '))

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:11:27) 
-- CODE:
var1 = int(input('primeira: '))
var2 = int(input('segunda: '))
var3 = int(input('terceira: '))

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:53:03) 
-- CODE:
var1 = int(input(''))
var2 = int(input(''))
var3 = int(input(''))

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:55:05) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:56:05) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total.2))

-- ERROR:
File "XXXX", line 5
    print(round(total.2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:56:14) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total,2))

-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:56:29) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total,2))

-- EXECUTION TIME:
0.149813
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:56:43) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total,n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:56:56) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:57:34) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = ((a*2 + b*2 + c*2))/(a+b+c)
print(round(total,7))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:58:11) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = (a*2 + b*2 + c*2)/(a+b+c)
print(round(total,7))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:58:30) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = (a**2 + b**2 + c**2)/(a+b+c)
print(round(total,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:58:39) 
-- CODE:
a = int(input(''))
b = int(input(''))
c = int(input(''))
total = (a**2 + b**2 + c**2)/(a+b+c)
print(round(total,7))
-- EXECUTION TIME:
0.138593
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
